@@ -84,8 +84,8 @@ bool follow_symlinks = false;
 /* How do we edit files in-place? (we don't if NULL) */
 char *in_place_extension = NULL;
 
-/* The mode to use to read/write files, either "rt"/"w" or "rb"/"wb".  */
-char *read_mode = "rt";
+/* The mode to use to read/write files, either "r"/"w" or "rb"/"wb".  */
+char *read_mode = "r";
 char *write_mode = "w";
 
 /* Do we need to be pedantically POSIX compliant? */
